--- a/_config.yml
+++ b/_config.yml
@@ -9,8 +9,8 @@
 title: Health, Healing, and Hope (H3)
 email: laura@h3withlaura.com
 description: A journey of the peaks and valleys of health, healing, and hope.
-baseurl: /rockmonkey4004.github.io # the subpath of your site, e.g. /blog
-url: "rockmonkey4004.github.io" # the base hostname & protocol for your site
+baseurl: # the subpath of your site, e.g. /blog
+url: # the base hostname & protocol for your site
 permalink: /:categories/:year/:month/:day/:title:output_ext
 
 
