--- a/_config.yml
+++ b/_config.yml
@@ -9,8 +9,8 @@
 title: Health, Healing, and Hope (H3)
 email: laura@h3withlaura.com
 description: A journey of the peaks and valleys of health, healing, and hope.
-baseurl: /www.h3withlaura.com # the subpath of your site, e.g. /blog
-url: "www.h3withlaura.com # the base hostname & protocol for your site
+baseurl:  # the subpath of your site, e.g. /blog
+url: "www.h3withlaura.com" # the base hostname & protocol for your site
 permalink: /:categories/:year/:month/:day/:title:output_ext
 
 
