--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ title: Health, Healing, and Hope (H3)
 email: laura@h3withlaura.com
 description: A journey of the peaks and valleys of health, healing, and hope.
 baseurl: # the subpath of your site, e.g. /blog
-url: "www.h3withlaura.com" # the base hostname & protocol for your site
+url: #"www.h3withlaura.com" # the base hostname & protocol for your site
 permalink: /:categories/:year/:month/:day/:title:output_ext
 
 
