--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@
 title: Health, Healing, and Hope (H3)
 email: laura@h3withlaura.com
 description: A journey of the peaks and valleys of health, healing, and hope.
-#baseurl: /rockmonkey4004.github.io # the subpath of your site, e.g. /blog
+baseurl: / # the subpath of your site, e.g. /blog
 url: "https://h3withlaura.com" # the base hostname & protocol for your site
 permalink: /:categories/:year/:month/:day/:title:output_ext
 
