--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,6 @@ tagline: "A journey of the peaks and valleys of health, healing, and hope."
 description: "Join me as I catalog my journey of the peaks and valleys of health, healing, and hope. I want to share some of my favorite paleo, gluten free, and egg free recipes. I hope to share my thoughts on health related topics and provide meaningful tips."
 email: laura@h3withlaura.com
 facebook_URL: "https://www.facebook.com/lauramsanders/"
-url:
 author: Laura
 font-awesome-icon-logo: ~
 github_username: ~
@@ -13,8 +12,8 @@ logo-image-url: /images/android-chrome-192x192_Logo.png
 markdown: kramdown
 permalink: "/:categories/:year/:month/:day/:title:output_ext"
 
-baseurl: "/rockmonkey4004" # the subpath of your site, e.g. /blog
-url: "https://rockmonkey4004.github.io" # the base hostname & protocol for your site
+# baseurl: "/rockmonkey4004" # the subpath of your site, e.g. /blog
+# url: "https://rockmonkey4004.github.io" # the base hostname & protocol for your site
 
 social:
   name: Laura Sanders
