--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,9 @@ github_username: ~
 instagram_username: lauramsanders
 logo-image-url: /images/android-chrome-192x192_Logo.png
 markdown: kramdown
-permalink: "/:categories/:year/:month/:day/:title:output_ext"
+permalink: /:categories/:year/:month/:day/:title
+
+
 
 # baseurl: "/rockmonkey4004" # the subpath of your site, e.g. /blog
 # url: "https://h3withlaura.com" # the base hostname & protocol for your site
