--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ author: Laura
 font-awesome-icon-logo: ~
 github_username: ~
 instagram_username: lauramsanders
-logo-image-url: /images/android-chrome-192x192_Logo.png
+logo-image-url: https://res.cloudinary.com/rockmonkey/image/upload/dpr_auto,f_auto,fl_any_format.fast_scale.force_strip.immutable_cache.progressive.progressive:semi.progressive:steep,q_auto/v1587782942/android-chrome-192x192_Logo_xkc9t6.png
 markdown: kramdown
 permalink: /:categories/:year/:month/:day/:title/
 
