--- a/_config.yml
+++ b/_config.yml
@@ -18,6 +18,8 @@ url: "https://h3withlaura.com"
 # baseurl: "/rockmonkey4004" # the subpath of your site, e.g. /blog
 # url: "https://h3withlaura.com" # the base hostname & protocol for your site
 
+github: [metadata]
+
 social:
   name: Laura Sanders
   links:
