--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ social:
     - https://www.instagram.com/lauramsanders/
 
 facebook:
-  app_id:
+  app_id: 2327305430910604
   publisher: https://www.facebook.com/h3withlaura
   admins:
 
