--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@ social:
 
 facebook:
   app_id: 2327305430910604
-  publisher: https://www.facebook.com/h3withlaura
+  publisher: 103500687925393
   admins:
 
 # The URL for the staticman API bridge endpoint
